--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -15,6 +15,7 @@
                   (imageUploaded)="handleImageUpload($event)"
                   (imageError)="handleImageError()"
                   [imageUploadRoute]= "imageUploadRoute"
+                  [ratio]="selectedRatio"
                   [id]="organization._id">
               </app-image-upload>  
             </div>
