Renamed some variables

--- a/src/app/create-product/create-product.component.html
+++ b/src/app/create-product/create-product.component.html
@@ -1,3 +1,7 @@
-<p>
-  create-product works!
-</p>
+<div class= "container">
+  <span>
+    <mat-card>
+      <mat-card-title>Create Product</mat-card-title>
+    </mat-card>
+  </span>
+</div>
