--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -9,14 +9,14 @@
         <mat-card-title> Update Organization </mat-card-title>
         <mat-card-content>
           <div class="organization-logo">
-            <img  mat-card-lg-image class="img-class" [src]="organization.logo" alt='Organization Logo'>
+            <img  mat-card-lg-image class="img-class" [src]="logo" alt='Organization Logo'>
             <div class="app-image-upload-positioner">
               <app-image-upload
                   (imageUploaded)="handleImageUpload($event)"
                   (imageError)="handleImageError()"
                   [imageUploadRoute]= "imageUploadRoute"
                   [ratio]="selectedRatio"
-                  [id]="organization._id">
+                  [id]="organization.id">
               </app-image-upload>  
             </div>
           </div>
