--- a/src/app/connection-requests/connection-requests.component.html
+++ b/src/app/connection-requests/connection-requests.component.html
@@ -1,24 +1,51 @@
-<div class="container">
+<div class="container" *ngIf='pendingConnections.length === 0'>
   <mat-card>
     <div class="col-md-8 offset-md-2">
-      <div *ngIf = 'pendingConnections.length === 0'>
-         <p> You dont have no new connections </p>
-      </div>
-      <ul>
-        <li *ngFor="let friend of pendingConnections">
-          <button class="simple-form-button" color="primary" mat-raised-button (click)="approveUserConnection(friend)">Confirm
-          </button>
-          &nbsp;
-          <button class="simple-form-button" mat-raised-button (click)="ignoreUserConnection(friend)">Ignore
-          </button>
-          &nbsp;
-          {{ friend.givenName}}   &nbsp;{{ friend.familyName }}
-          &nbsp; &nbsp;
-          <br>
-          <br>
-        </li>
-      </ul>
+      <p> You dont have no new connections </p>
     </div>
-    <br>
   </mat-card>
+</div>
+
+<div *ngIf='pendingConnections.length > 0'>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!-- givenName Column -->
+    <ng-container matColumnDef="Given Name">
+        <th mat-header-cell *matHeaderCellDef> 
+            Given name 
+        </th>
+        <td mat-cell *matCellDef="let element"> 
+            {{element.givenName}} 
+        </td>
+    </ng-container>
+
+    <!-- familyName Column -->
+    <ng-container matColumnDef="Family Name">
+        <th mat-header-cell *matHeaderCellDef> 
+            Family name 
+        </th>
+        <td mat-cell *matCellDef="let element"> 
+            {{element.familyName}} 
+        </td>
+    </ng-container>
+
+    <!-- familyName Column -->
+    <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef> 
+          Take action 
+        </th>
+        <td mat-cell *matCellDef="let element">
+            <button class="simple-form-button" color="primary" mat-raised-button (click)="approveUserConnection(element)">
+                Confirm
+            </button>
+              &nbsp;
+            <button class="simple-form-button" mat-raised-button (click)="ignoreUserConnection(element)">
+                Ignore
+            </button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
