--- a/src/app/view-connections/view-connections.component.html
+++ b/src/app/view-connections/view-connections.component.html
@@ -1,21 +1,35 @@
-<div class="container">
+<div class="container" *ngIf='confirmedConnections.length === 0'>
   <mat-card>
     <div class="col-md-8 offset-md-2">
-      <div class="container">
-        <mat-card>
-          <div class="col-md-8 offset-md-2">
-            <div>
-              <p> your connections are </p>
-              <ul>
-                <li *ngFor="let friend of confirmedConnections" (click)="onSelect(friend)">
-                  {{ friend }}
-                  &nbsp; &nbsp;
-                  <a href="{{link}}" target="_blank">view profile</a>
-                  <br>
-                  <br>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </mat-card>
-      </div>
+      <p> You dont have no connections </p>
+    </div>
+  </mat-card>
+</div>
+
+<div *ngIf='confirmedConnections.length > 0'>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!-- givenName Column -->
+    <ng-container matColumnDef="Given Name">
+      <th mat-header-cell *matHeaderCellDef>
+        Given name
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{element.givenName}}
+      </td>
+    </ng-container>
+
+    <!-- familyName Column -->
+    <ng-container matColumnDef="Family Name">
+      <th mat-header-cell *matHeaderCellDef>
+        Family name
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{element.familyName}}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
