--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -19,19 +19,19 @@
     <td mat-cell *matCellDef="let element"> {{element.position}} </td>
   </ng-container>
 
-  <!-- Name Column -->
+  <!-- givenName Column -->
   <ng-container matColumnDef="Given Name">
     <th mat-header-cell *matHeaderCellDef> Given name </th>
     <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
+  <!-- familyName Column -->
   <ng-container matColumnDef="Family Name">
     <th mat-header-cell *matHeaderCellDef> Family name </th>
     <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
+  <!-- email Column -->
   <ng-container matColumnDef="Email">
     <th mat-header-cell *matHeaderCellDef> Email </th>
     <td mat-cell *matCellDef="let element"> {{element.email}} </td>
