--- a/src/app/organization/organization.component.scss
+++ b/src/app/organization/organization.component.scss
@@ -12,3 +12,14 @@
   display:flex;
   margin-bottom: 7px;
 }
+
+.defaultLogo {
+  height: 222px;
+  font-size: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid;
+  background-color: lightgrey;
+}
