--- a/src/app/update-organization/update-organization.component.scss
+++ b/src/app/update-organization/update-organization.component.scss
@@ -42,3 +42,10 @@
   margin: 21px 4px;
   cursor: pointer;
 }
+
+.defaultLogo {
+  border-radius: 50%;
+  font-size: 10px;
+  display: flex;
+  background-color: lightgrey;
+}
