Fixed contact and connections
- Contacts auth added. 
- Contact new view UI added
- Connections new view UI added
- Contact model modified 
- Contact controller modified

--- a/src/app/connection-requests/connection-requests.component.html
+++ b/src/app/connection-requests/connection-requests.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf='pendingConnections.length === 0'>
   <mat-card>
     <div class="col-md-8 offset-md-2">
-      <p> You dont have no new connections </p>
+      <p> No connections requests </p>
     </div>
   </mat-card>
 </div>
