--- a/src/app/connections/connections.component.html
+++ b/src/app/connections/connections.component.html
@@ -2,13 +2,13 @@
   <mat-card>
     <div class="col-md-8 offset-md-2">
       <nav mat-tab-nav-bar>
-        <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+        <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla0="routerLinkActive" [active]="rla0.isActive">
             View connections {{ConfirmedConnectionsCounter}}
         </a>
-        <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+        <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive">
            Requests {{pendingConnectionsCounter}}
         </a>
-        <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+        <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
             Add 
         </a>
       </nav>
@@ -16,3 +16,4 @@
     </div>
   </mat-card>
 </div>
+
