--- a/src/app/view-connections/view-connections.component.html
+++ b/src/app/view-connections/view-connections.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf='confirmedConnections.length === 0'>
   <mat-card>
     <div class="col-md-8 offset-md-2">
-      <p> You dont have no connections </p>
+      <p> You dont have connections yet </p>
     </div>
   </mat-card>
 </div>
