--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -1,3 +1,13 @@
+<div class="container" *ngIf='allContacts.length === 0'>
+  <mat-card>
+    <div class="col-md-8 offset-md-2">
+      <p> You dont have contacts </p>
+    </div>
+  </mat-card>
+</div>
+
+<div *ngIf='allContacts.length > 0'>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <!-- Checkbox Column -->
@@ -41,3 +51,4 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
   </tr>
 </table>
+</div>
