--- a/src/app/connections/connections.component.html
+++ b/src/app/connections/connections.component.html
@@ -3,10 +3,12 @@
       <div class="col-md-8 offset-md-2">
         <nav mat-tab-nav-bar>
             <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla0="routerLinkActive" [active]="rla0.isActive">
-              View connections {{ConfirmedConnectionsCounter}}
-            </a>
+              View connections 
+                <span matBadge="{{confirmedConnectionsCounter}}" matBadgeOverlap="false" matBadgeColor="warn"> </span>
+            </a> 
             <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive">
-              Requests {{pendingConnectionsCounter}}
+              Requests 
+                <span matBadge="{{pendingConnectionsCounter}}" matBadgeOverlap="false" matBadgeColor="warn"> </span>
             </a>
             <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
               Add 
