--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -17,7 +17,7 @@
                   (imageError)="handleImageError()"
                   [imageUploadRoute]= "imageUploadRoute"
                   [ratio]="selectedRatio"
-                  [id]="organization.id">
+                  [id]="organization._id">
               </app-image-upload>  
             </div>
           </div>
