--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -27,7 +27,7 @@
             </span>
             <span class="icon">
               <mat-icon style="font-size:22px;" matSuffix>contacts</mat-icon> 
-                {{organizations.username}}
+                {{username[organizations._id]}}
               </span>
             <span style="display:flex;">
               <mat-icon style="font-size:22px;" matSuffix>person</mat-icon> 
@@ -35,12 +35,12 @@
             </span> <br>
             <button *ngIf="userRoles[organizations._id].indexOf('admin') !== -1"
                     mat-raised-button 
-                    (click)="updateOrg(organizations)" 
+                    (click)="updateOrg(username[organizations._id])" 
                     color="primary">
                     Update
             </button>
             <label *ngIf="userRoles[organizations._id].indexOf('admin') !== -1" style="float:right;">
-              <span (click)="addUser(organizations)">
+              <span (click)="addUser(username[organizations._id])">
                 <mat-icon style="cursor:pointer; font-size: 32px;">
                   person_add
                 </mat-icon>
