--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -63,10 +63,10 @@
             <span *ngIf="submitSuccess"  class="successMessage">
                 {{successMessage}}
             </span>
-            <span *ngFor="let user of users" class="displayUsers">
-                <img mat-card-sm-image class="userImage" [src]="user.profileImage" alt='Profile Image'>
-                <span class="username">{{user.username}}</span>
-              <label (click)="userDialog(user._id, deleteUser)">
+            <span *ngFor="let user_name of usernames" class="displayUsers">
+                <img mat-card-sm-image class="userImage" [src]="users[user_name.refId]" alt='Profile Image'>
+                <span class="username">{{user_name.username}}</span>
+              <label (click)="userDialog(user_name.refId, deleteUser)">
                 <mat-icon class="removeIcon" matSuffix>block</mat-icon>
               </label>
             </span>
