--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -3,10 +3,10 @@
       <div class="col-md-8 offset-md-2">
         <nav mat-tab-nav-bar>
           <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla="routerLinkActive" [active]="!rla.isActive">
-              View contacts
+              View
           </a>
           <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
-              Add contacts
+              Add
           </a>
         </nav>
         <router-outlet></router-outlet>
