--- a/src/app/add-connection/add-connections.component.html
+++ b/src/app/add-connection/add-connections.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-card>
-    <div class="col-md-8 offset-md-2">
+    <div class="col-md-8 offset-md-2" *ngIf='requestFromMessage == null'>
       <p> Find user </p>
         <mat-card-content>
           <form [formGroup]="form">
@@ -8,9 +8,6 @@
               <mat-form-field class="simple-form-field-10">
                   <input matInput placeholder="Username" name="username" formControlName="username">
               </mat-form-field>
-              <span *ngIf='formErrorMessage' class="text-error-color">
-                  {{formErrorMessage}}
-              </span>
               <br>
               <br>
               <button class="simple-form-button" color="primary" mat-raised-button (click)="requestUserConnection(form.value)">
@@ -20,5 +17,11 @@
           </form>
         </mat-card-content>
     </div>
+    <div *ngIf='requestFromMessage != null'>
+        <mat-card-title> {{requestFromMessage}}</mat-card-title>
+        <button routerLink='/connections/add' class="simple-form-button" color="primary" mat-raised-button (click)="func1()">
+            Ok
+        </button>
+      </div>
   </mat-card>
 </div>
