--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -2,10 +2,13 @@
     <mat-card>
       <div class="col-md-8 offset-md-2">
         <nav mat-tab-nav-bar>
-          <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla="routerLinkActive" [active]="!rla.isActive">
+          <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive">
               View
           </a>
-          <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+          <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
+              Fav
+          </a>
+          <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla3="routerLinkActive" [active]="rla3.isActive">
               Add
           </a>
         </nav>
