--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -19,6 +19,15 @@
       </mat-checkbox>
     </td>
   </ng-container>
+  <!-- Favourite Column -->
+  <ng-container matColumnDef="Favourite">
+    <th mat-header-cell *matHeaderCellDef> Favourite </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button>
+        <mat-icon >favorite</mat-icon>
+      </button>
+    </td>
+  </ng-container>
   <!-- givenName Column -->
   <ng-container matColumnDef="Given Name">
     <th mat-header-cell *matHeaderCellDef> Given name </th>
