--- a/src/app/view-connections/view-connections.component.html
+++ b/src/app/view-connections/view-connections.component.html
@@ -26,6 +26,17 @@
           {{element.familyName}}
         </td>
       </ng-container>
+       <!-- action Column -->
+       <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef>
+          Delete connection 
+        </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button (click)="deleteConnection(element)">
+            <mat-icon >delete</mat-icon>
+
+        </button>        </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
