--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -24,7 +24,14 @@
     <th mat-header-cell *matHeaderCellDef> Favourite </th>
     <td mat-cell *matCellDef="let element">
       <button mat-icon-button>
-        <mat-icon >favorite</mat-icon>
+        <span *ngIf='!element.isFavourite'>
+          <mat-icon >star_border</mat-icon>
+          </span>
+          <span *ngIf='element.isFavourite'>
+            <mat-icon >star</mat-icon>
+            </span>
+            {{element.isFavourite}}
+
       </button>
     </td>
   </ng-container>
