--- a/src/app/connections/connections.component.html
+++ b/src/app/connections/connections.component.html
@@ -10,6 +10,9 @@
                 <span matBadge="{{pendingConnectionsCounter}}" matBadgeOverlap="false" matBadgeColor="warn"> </span>
             </a>
             <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
+              Sent 
+            </a>
+            <a mat-tab-link [routerLink]="navLinks[3]" routerLinkActive #rla3="routerLinkActive" [active]="rla3.isActive">
               Add 
             </a>
         </nav>
