--- a/src/app/sent-connections/sent-connections.component.html
+++ b/src/app/sent-connections/sent-connections.component.html
@@ -32,10 +32,8 @@
         Delete connection
       </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button (click)="deleteConnection(element)">
-          <mat-icon>delete</mat-icon>
-
-        </button> </td>
+           <mat-icon mat-raised-button (click)="deleteConnection(element)">delete</mat-icon>
+       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
