--- a/src/app/sent-connections/sent-connections.component.html
+++ b/src/app/sent-connections/sent-connections.component.html
@@ -29,11 +29,12 @@
     <!-- action Column -->
     <ng-container matColumnDef="Action">
       <th mat-header-cell *matHeaderCellDef>
-        Delete connection
+        Cancel connection
       </th>
       <td mat-cell *matCellDef="let element">
-           <mat-icon mat-raised-button (click)="deleteConnection(element)">delete</mat-icon>
-       </td>
+        <button mat-icon-button (click)="deleteConnection(element)">
+          <mat-icon >delete</mat-icon>
+        </button>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
