--- a/src/app/connection-requests/connection-requests.component.html
+++ b/src/app/connection-requests/connection-requests.component.html
@@ -8,44 +8,45 @@
 
 <div *ngIf='pendingConnections.length > 0'>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <!-- givenName Column -->
-            <ng-container matColumnDef="Given Name">
-                <th mat-header-cell *matHeaderCellDef> 
-                    Given name 
-                </th>
-                <td mat-cell *matCellDef="let element"> 
-                    {{element.givenName}} 
-                </td>
-            </ng-container>
-            <!-- familyName Column -->
-            <ng-container matColumnDef="Family Name">
-                <th mat-header-cell *matHeaderCellDef> 
-                    Family name 
-                </th>
-                <td mat-cell *matCellDef="let element"> 
-                    {{element.familyName}} 
-                </td>
-            </ng-container>
-            <!-- familyName Column -->
-            <ng-container matColumnDef="Action">
-                <th mat-header-cell *matHeaderCellDef> 
-                Take action 
-                </th>
-                <td mat-cell *matCellDef="let element">
-                    <button class="simple-form-button" color="primary" mat-raised-button (click)="approveUserConnection(element)">
-                        Confirm
-                    </button>
-                    &nbsp;
-                    <button class="simple-form-button" mat-raised-button (click)="ignoreUserConnection(element)">
-                        Ignore
-                    </button>
-                    <span *ngIf='userErrorId == element.userId'>
-                         <span *ngIf='formErrorMessage' class="text-error-color">
-                            {{formErrorMessage}}
-                         </span>
+        <!-- givenName Column -->
+        <ng-container matColumnDef="Given Name">
+            <th mat-header-cell *matHeaderCellDef>
+                Given name
+            </th>
+            <td mat-cell *matCellDef="let element">
+                {{element.givenName}}
+            </td>
+        </ng-container>
+        <!-- familyName Column -->
+        <ng-container matColumnDef="Family Name">
+            <th mat-header-cell *matHeaderCellDef>
+                Family name
+            </th>
+            <td mat-cell *matCellDef="let element">
+                {{element.familyName}}
+            </td>
+        </ng-container>
+        <!-- familyName Column -->
+        <ng-container matColumnDef="Action">
+            <th mat-header-cell *matHeaderCellDef>
+                Take action
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <button class="simple-form-button" color="primary" mat-raised-button
+                    (click)="approveUserConnection(element)">
+                    Confirm
+                </button>
+                &nbsp;
+                <button class="simple-form-button" mat-raised-button (click)="ignoreUserConnection(element)">
+                    Ignore
+                </button>
+                <span *ngIf='userErrorId == element.userId'>
+                    <span *ngIf='formErrorMessage' class="text-error-color">
+                        {{formErrorMessage}}
                     </span>
-                </td>
-            </ng-container>
+                </span>
+            </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
