--- a/src/app/sent-connections/sent-connections.component.html
+++ b/src/app/sent-connections/sent-connections.component.html
@@ -29,11 +29,11 @@
     <!-- action Column -->
     <ng-container matColumnDef="Action">
       <th mat-header-cell *matHeaderCellDef>
-        Cancel connection
+        Cancel request
       </th>
       <td mat-cell *matCellDef="let element">
         <button mat-icon-button (click)="deleteConnection(element)">
-          <mat-icon >delete</mat-icon>
+          <mat-icon>delete</mat-icon>
         </button>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
