--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -5,6 +5,7 @@
     </div>
   </mat-card>
 </div>
+<div *ngIf='!isEditMode'>
 <div *ngIf='allContacts.length > 0'>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- Checkbox Column -->
@@ -57,10 +58,47 @@
         <button mat-icon-button (click)="deleteContact(element)">
           <mat-icon>delete</mat-icon>
         </button>
+        <button mat-icon-button (click)="editContact(element)">
+          <mat-icon>border_color</mat-icon>
+        </button>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
     </tr>
   </table>
+</div>
+</div>
+
+<div class="simple-form-aligner" *ngIf='isEditMode'>
+  <mat-card class="simple-form-card">
+    <mat-card-title>Edit contact </mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
+          </mat-form-field>
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
+          </mat-form-field>
+          <br>
+          <mat-form-field class="simple-form-field-100">
+            <input matInput placeholder="Email" name="email" formControlName="email">
+            <mat-error>
+              Not a valid email
+            </mat-error>
+          </mat-form-field>
+          <br>
+          <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+            value="submit" (click)="updateContact(form.value)">
+            Update contact
+          </button>
+          <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+            [diameter]=22>
+          </mat-progress-spinner>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
