--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -21,16 +21,16 @@
         </mat-checkbox>
       </td>
     </ng-container>
-    <!-- Favourite Column -->
-    <ng-container matColumnDef="Favourite">
-      <th mat-header-cell *matHeaderCellDef> Favourite </th>
+    <!-- Favorite Column -->
+    <ng-container matColumnDef="Favorite">
+      <th mat-header-cell *matHeaderCellDef> Favorite </th>
       <td mat-cell *matCellDef="let element">
-        <span *ngIf='!element.isFavourite'>
+        <span *ngIf='!element.isFavorite'>
           <button mat-icon-button (click)="addContactFav(element)">
             <mat-icon>star_border</mat-icon>
           </button>
         </span>
-        <span *ngIf='element.isFavourite'>
+        <span *ngIf='element.isFavorite'>
           <button mat-icon-button (click)="removeContactFav(element)">
             <mat-icon>star</mat-icon>
           </button>
@@ -59,7 +59,7 @@
           <mat-icon>delete</mat-icon>
         </button>
         <button mat-icon-button (click)="editContact(element)">
-          <mat-icon>border_color</mat-icon>
+          <mat-icon>create</mat-icon>
         </button>
       </td>
     </ng-container>
