--- a/src/app/view-connections/view-connections.component.html
+++ b/src/app/view-connections/view-connections.component.html
@@ -31,10 +31,9 @@
         Delete connection
       </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button (click)="deleteConnection(element)">
+        <button mat-icon-button (click)="deleteConnection(element)">
           <mat-icon>delete</mat-icon>
         </button>
-      </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
