--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -6,68 +6,61 @@
   </mat-card>
 </div>
 <div *ngIf='!isEditMode'>
-<div *ngIf='allContacts.length > 0'>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()">
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </td>
-    </ng-container>
-    <!-- Favorite Column -->
-    <ng-container matColumnDef="Favorite">
-      <th mat-header-cell *matHeaderCellDef> Favorite </th>
-      <td mat-cell *matCellDef="let element">
-        <span *ngIf='!element.isFavorite'>
-          <button mat-icon-button (click)="addContactFav(element)">
-            <mat-icon>star_border</mat-icon>
+  <div *ngIf='allContacts.length > 0'>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+      <!-- givenName Column -->
+      <ng-container matColumnDef="Given Name">
+        <th mat-header-cell *matHeaderCellDef> Given name </th>
+        <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
+      </ng-container>
+      <!-- familyName Column -->
+      <ng-container matColumnDef="Family Name">
+        <th mat-header-cell *matHeaderCellDef> Family name </th>
+        <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
+      </ng-container>
+      <!-- email Column -->
+      <ng-container matColumnDef="Email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      </ng-container>
+      <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let element">
+          <span *ngIf='!element.isFavorite'>
+            <button mat-icon-button (click)="addContactFav(element)">
+              <mat-icon>star_border</mat-icon>
+            </button>
+          </span>
+          <span *ngIf='element.isFavorite'>
+            <button mat-icon-button (click)="removeContactFav(element)">
+              <mat-icon>star</mat-icon>
+            </button>
+          </span>
+          <button mat-icon-button (click)="editContact(element)">
+            <mat-icon>create</mat-icon>
+          </button> <button mat-icon-button (click)="deleteContact(element)">
+            <mat-icon>delete</mat-icon>
           </button>
-        </span>
-        <span *ngIf='element.isFavorite'>
-          <button mat-icon-button (click)="removeContactFav(element)">
-            <mat-icon>star</mat-icon>
-          </button>
-        </span>
-      </td>
-    </ng-container>
-    <!-- givenName Column -->
-    <ng-container matColumnDef="Given Name">
-      <th mat-header-cell *matHeaderCellDef> Given name </th>
-      <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
-    </ng-container>
-    <!-- familyName Column -->
-    <ng-container matColumnDef="Family Name">
-      <th mat-header-cell *matHeaderCellDef> Family name </th>
-      <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
-    </ng-container>
-    <!-- email Column -->
-    <ng-container matColumnDef="Email">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-    <ng-container matColumnDef="Action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button (click)="deleteContact(element)">
-          <mat-icon>delete</mat-icon>
-        </button>
-        <button mat-icon-button (click)="editContact(element)">
-          <mat-icon>create</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-    </tr>
-  </table>
-</div>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+      </tr>
+    </table>
+  </div>
 </div>
 
 <div class="simple-form-aligner" *ngIf='isEditMode'>
