--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -49,10 +49,9 @@
             {{successMessage}}
           </span>
           <span *ngFor="let user_name of usernames" class="displayUsers">
-            <img mat-card-sm-image *ngIf="users[user_name.refId]" class="userImage" [src]="users[user_name.refId]"
+            <img mat-card-sm-image *ngIf="users[user_name.refId]" class="userImage" [src]="users[user_name.refId]" alt='Profile Image'>
+            <img mat-card-sm-image *ngIf="!users[user_name.refId]" class="userImage" src='assets/img/default-profile-photo.png'
               alt='Profile Image'>
-            <img mat-card-sm-image *ngIf="!users[user_name.refId]" class="userImage"
-              src='assets/img/default-profile-photo.png' alt='Profile Image'>
             <span class="username">{{user_name.username}}</span>
             <label (click)="userDialog(user_name.refId, deleteUser)">
               <mat-icon class="removeIcon" matSuffix>block</mat-icon>
