--- a/src/app/view-fav-contacts/view-fav-contacts.component.html
+++ b/src/app/view-fav-contacts/view-fav-contacts.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf='allContacts.length === 0'>
   <mat-card>
     <div class="col-md-8 offset-md-2">
-      <p> You dont have favourite </p>
+      <p> You dont have favorite </p>
     </div>
   </mat-card>
 </div>
