forgot username updated

--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -66,7 +66,7 @@
             <mat-dialog-actions align='center'>
               <button (click)="cancel()" mat-raised-button color='warn'>Cancel
               </button>
-              <button (click)="delUser()" mat-raised-button cdkFocusInitial color='primary'>Remove
+              <button (click)="removeUser()" mat-raised-button cdkFocusInitial color='primary'>Remove
               </button>
             </mat-dialog-actions>
           </div>
