--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.html
@@ -32,17 +32,20 @@
         <th mat-header-cell *matHeaderCellDef> List name</th>
           <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.listName}}  
               &nbsp; &nbsp;
-              <span matBadge="{{element.numberOfContacts}}" matBadgeOverlap="false" matBadgePosition="above after" > </span>
+                  <span matBadge="{{element.numberOfContacts}}" matBadgeOverlap="false" matBadgePosition="above after" > </span>
           </td>
       </ng-container>
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="editContact(element)">
+          <button mat-icon-button (click)="editListForm(element)">
             <mat-icon>create</mat-icon>
-          </button> <button mat-icon-button (click)="deleteContact(element)">
+          </button>
+          
+          <button mat-icon-button (click)="openDeleteList(element)">
             <mat-icon>delete</mat-icon>
           </button>
+          
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -53,6 +56,8 @@
 
   </div>
 </div>
+
+
   <div class="simple-form-aligner" *ngIf='isEditMode'>
     <mat-card class="simple-form-card">
       <mat-card-title>Create list </mat-card-title>
@@ -82,8 +87,62 @@
         </form>
       </mat-card-content>
     </mat-card>
-
   </div>
+
+  
+  <div class="simple-form-aligner" *ngIf='isUpdateMode'>
+      <mat-card class="simple-form-card">
+        <mat-card-title>Rename list </mat-card-title>
+        <mat-card-content>
+          <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+            <div class="form-group">
+              <mat-form-field class="simple-form-field-50">
+                <input matInput placeholder="List name" name="listName" formControlName="listName">
+              </mat-form-field>
+              <br>
+              <div style="text-align: center">
+                <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+                  value="submit" (click)="updateList(form.value)">
+                  Update
+                </button>
+                &nbsp;
+                &nbsp;
+                <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
+                  value="submit" (click)="ignoreSaveContact()">
+                  Cancel
+                </button>
+              </div>
+              <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+                [diameter]=22>
+              </mat-progress-spinner>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  
+    
+<div *ngIf='isDelete' align='center' >
+    <mat-card>
+        <mat-card-title *ngIf='listDetail.numberOfContacts > 0' > Are you sure you want to delete this list that has {{listDetail.numberOfContacts}} contacts? </mat-card-title>
+        <mat-card-title *ngIf='listDetail.numberOfContacts === 0' > You are about to delete the empty list {{listDetail.listName}} </mat-card-title>
+        <div >
+      <button routerLink='/contacts/lists' class="simple-form-button pull-center" color="Basic" mat-raised-button
+        (click)="resetForm()"> 
+        Cancel
+      </button>
+      &nbsp;
+      &nbsp;
+      <button routerLink='/contacts/lists' class="simple-form-button pull-center" color="primary" mat-raised-button
+        (click)="deleteList()"> 
+        Delete
+      </button>
+      </div>
+    </mat-card>
+  </div>
+
+
+ 
   <div *ngIf='listAddMessage !== undefined'>
   <div *ngIf='!isEditMode'>
     <mat-card-title> {{listAddMessage}}</mat-card-title>
