--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -128,7 +128,7 @@
             &nbsp;
             &nbsp;
             <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-              value="submit" (click)="ignoreSaveContact()">
+              value="submit" (click)="resetForm()">
               Cancel
             </button>
           </div>
