--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.html
@@ -8,12 +8,11 @@
   </div>
 </div>
 <div *ngIf='isViewAll'>
-    <button color="primary" class="simple-form-button pull-right" mat-raised-button
-      routerLink='./add'>
-      +
-    </button>
-    <div *ngIf='lists.length > 0'>
-      <table mat-table [dataSource]="lists" class="mat-elevation-z8">
+  <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='./add'>
+    +
+  </button>
+  <div *ngIf='lists.length > 0'>
+    <table mat-table [dataSource]="lists" class="mat-elevation-z8">
       <!-- Checkbox Column -->
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
@@ -30,10 +29,10 @@
       <!-- givenName Column -->
       <ng-container matColumnDef="listName">
         <th mat-header-cell *matHeaderCellDef> List name</th>
-          <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.listName}}  
-              &nbsp; &nbsp;
-                  <span matBadge="{{element.numberOfContacts}}" matBadgeOverlap="false" matBadgePosition="above after" > </span>
-          </td>
+        <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.listName}}
+          &nbsp; &nbsp;
+          <span matBadge="{{element.numberOfContacts}}" matBadgeOverlap="false" matBadgePosition="above after"> </span>
+        </td>
       </ng-container>
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
@@ -41,11 +40,11 @@
           <button mat-icon-button (click)="editListForm(element)">
             <mat-icon>create</mat-icon>
           </button>
-          
+
           <button mat-icon-button (click)="openDeleteList(element)">
             <mat-icon>delete</mat-icon>
           </button>
-          
+
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -58,98 +57,100 @@
 </div>
 
 
-  <div class="simple-form-aligner" *ngIf='isEditMode'>
-    <mat-card class="simple-form-card">
-      <mat-card-title>Create list </mat-card-title>
-      <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-          <div class="form-group">
-            <mat-form-field class="simple-form-field-50">
-              <input matInput placeholder="List name" name="listName" formControlName="listName">
-            </mat-form-field>
-            <br>
-            <div style="text-align: center">
-              <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-                value="submit" (click)="addList(form.value)">
-                Create
-              </button>
-              &nbsp;
-              &nbsp;
-              <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-                value="submit" (click)="ignoreSaveContact()">
-                Cancel
-              </button>
-            </div>
-            <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
-              [diameter]=22>
-            </mat-progress-spinner>
+<div class="simple-form-aligner" *ngIf='isEditMode'>
+  <mat-card class="simple-form-card">
+    <mat-card-title>Create list </mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="List name" name="listName" formControlName="listName">
+          </mat-form-field>
+          <br>
+          <div style="text-align: center">
+            <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+              value="submit" (click)="addList(form.value)">
+              Create
+            </button>
+            &nbsp;
+            &nbsp;
+            <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
+              value="submit" (click)="resetForm()">
+              Cancel
+            </button>
           </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
-  </div>
+          <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+            [diameter]=22>
+          </mat-progress-spinner>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
 
-  
-  <div class="simple-form-aligner" *ngIf='isUpdateMode'>
-      <mat-card class="simple-form-card">
-        <mat-card-title>Rename list </mat-card-title>
-        <mat-card-content>
-          <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-            <div class="form-group">
-              <mat-form-field class="simple-form-field-50">
-                <input matInput placeholder="List name" name="listName" formControlName="listName">
-              </mat-form-field>
-              <br>
-              <div style="text-align: center">
-                <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-                  value="submit" (click)="updateList(form.value)">
-                  Update
-                </button>
-                &nbsp;
-                &nbsp;
-                <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-                  value="submit" (click)="ignoreSaveContact()">
-                  Cancel
-                </button>
-              </div>
-              <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
-                [diameter]=22>
-              </mat-progress-spinner>
-            </div>
-          </form>
-        </mat-card-content>
-      </mat-card>
-    </div>
-  
-    
-<div *ngIf='isDelete' align='center' >
-    <mat-card>
-        <mat-card-title *ngIf='listDetail.numberOfContacts > 0' > Are you sure you want to delete this list that has {{listDetail.numberOfContacts}} contacts? </mat-card-title>
-        <mat-card-title *ngIf='listDetail.numberOfContacts === 0' > You are about to delete the empty list {{listDetail.listName}} </mat-card-title>
-        <div >
+
+<div class="simple-form-aligner" *ngIf='isUpdateMode'>
+  <mat-card class="simple-form-card">
+    <mat-card-title>Rename list </mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="List name" name="listName" formControlName="listName">
+          </mat-form-field>
+          <br>
+          <div style="text-align: center">
+            <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+              value="submit" (click)="updateList(form.value)">
+              Update
+            </button>
+            &nbsp;
+            &nbsp;
+            <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
+              value="submit" (click)="resetForm()">
+              Cancel
+            </button>
+          </div>
+          <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+            [diameter]=22>
+          </mat-progress-spinner>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+
+<div *ngIf='isDelete' align='center'>
+  <mat-card>
+    <mat-card-title *ngIf='listDetails.numberOfContacts > 0'> Are you sure you want to delete the list
+      {{listDetails.listName}} that has {{listDetails.numberOfContacts}} contacts? </mat-card-title>
+    <mat-card-title *ngIf='listDetails.numberOfContacts === 0'> You are about to delete the empty list
+      {{listDetails.listName}} </mat-card-title>
+    <div>
       <button routerLink='/contacts/lists' class="simple-form-button pull-center" color="Basic" mat-raised-button
-        (click)="resetForm()"> 
+        (click)="resetForm()">
         Cancel
       </button>
       &nbsp;
       &nbsp;
       <button routerLink='/contacts/lists' class="simple-form-button pull-center" color="primary" mat-raised-button
-        (click)="deleteList()"> 
+        (click)="deleteList()">
         Delete
       </button>
-      </div>
+    </div>
+  </mat-card>
+</div>
+
+
+<div *ngIf='listAddMessage !== undefined'>
+  <div *ngIf='!isEditMode'>
+    <mat-card>
+      <mat-card-title> {{listAddMessage}}</mat-card-title>
+      <button routerLink='/contacts/lists' class="simple-form-button" color="primary" mat-raised-button
+        (click)="resetForm()">
+        Ok
+      </button>
     </mat-card>
   </div>
-
-
- 
-  <div *ngIf='listAddMessage !== undefined'>
-  <div *ngIf='!isEditMode'>
-    <mat-card-title> {{listAddMessage}}</mat-card-title>
-    <button routerLink='/contacts/lists' class="simple-form-button" color="primary" mat-raised-button
-      (click)="resetForm()">
-      Ok
-    </button>
-  </div>
-  </div>
-
+</div>
