--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -159,7 +159,7 @@
           Are you sure you want to delete the contact of <br> {{deleteContactName}}?
       </div>
     </mat-dialog-content>
-    <mat-dialog-actions align='end'>
+    <mat-dialog-actions align='center'>
       <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
       </button>
       <button (click)="deleteContact()" mat-raised-button cdkFocusInitial color='primary'>Yes
