--- a/src/app/contacts/contacts-list-details/contacts-list-details.component.html
+++ b/src/app/contacts/contacts-list-details/contacts-list-details.component.html
@@ -1,7 +1,7 @@
     <div class="container" *ngIf='listContact.length === 0'>
       <mat-card>
         <div class="col-md-8 offset-md-2">
-          <p> You dont have lists </p>
+          <p> You dont have contacts into this list </p>
         </div>
       </mat-card>
     </div>
