--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.html
@@ -26,22 +26,28 @@
           </mat-checkbox>
         </td>
       </ng-container>
+      
       <!-- givenName Column -->
       <ng-container matColumnDef="listName">
-        <th mat-header-cell *matHeaderCellDef> List name</th>
-        <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.listName}}
-          &nbsp; &nbsp;
-          <span matBadge="{{element.numberOfContacts}}" matBadgeOverlap="false" matBadgePosition="above after"> </span>
-        </td>
-      </ng-container>
+          <th mat-header-cell *matHeaderCellDef> List name</th>
+          <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.listName}}
+          </td>
+        </ng-container>
+
+           <!-- givenName Column -->
+      <ng-container matColumnDef="NoOfContacts">
+          <th mat-header-cell *matHeaderCellDef> No. Of Contacts</th>
+          <td mat-cell *matCellDef="let element" (click)="onSelect(element)"> {{element.numberOfContacts}}
+          </td>
+        </ng-container>
+
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="editListForm(element)">
             <mat-icon>create</mat-icon>
           </button>
-
-          <button mat-icon-button (click)="openDeleteList(element)">
+          <button mat-icon-button (click)="openDeleteList(element)" (click)="listDeleteDialog(model)">
             <mat-icon>delete</mat-icon>
           </button>
 
@@ -120,29 +126,6 @@
   </mat-card>
 </div>
 
-
-<div *ngIf='isDelete' align='center'>
-  <mat-card>
-    <mat-card-title *ngIf='listDetails.numberOfContacts > 0'> Are you sure you want to delete the list
-      {{listDetails.listName}} that has {{listDetails.numberOfContacts}} contacts? </mat-card-title>
-    <mat-card-title *ngIf='listDetails.numberOfContacts === 0'> You are about to delete the empty list
-      {{listDetails.listName}} </mat-card-title>
-    <div>
-      <button routerLink='/contacts/lists' class="simple-form-button pull-center" color="Basic" mat-raised-button
-        (click)="resetForm()">
-        Cancel
-      </button>
-      &nbsp;
-      &nbsp;
-      <button routerLink='/contacts/lists' class="simple-form-button pull-center" color="primary" mat-raised-button
-        (click)="deleteList()">
-        Delete
-      </button>
-    </div>
-  </mat-card>
-</div>
-
-
 <div *ngIf='listAddMessage !== undefined'>
   <div *ngIf='!isEditMode'>
     <mat-card>
@@ -154,3 +137,21 @@
     </mat-card>
   </div>
 </div>
+
+<ng-template #model>
+  <mat-dialog-content>
+    <div>
+      <mat-card-title *ngIf='listDetails.numberOfContacts > 0'> Are you sure you want to delete the list
+        {{listDetails.listName}} that has {{listDetails.numberOfContacts}} contacts? </mat-card-title>
+      <mat-card-title *ngIf='listDetails.numberOfContacts === 0'> You are about to delete the empty list
+        {{listDetails.listName}} </mat-card-title>
+
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions align='center'>
+    <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
+    </button>
+    <button (click)="deleteList()" mat-raised-button cdkFocusInitial color='primary'>Yes
+    </button>
+  </mat-dialog-actions>
+</ng-template>
