--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.html
@@ -132,7 +132,7 @@
   <div *ngIf='!isEditMode'>
     <mat-card>
       <mat-card-title> {{listAddMessage}}</mat-card-title>
-      <button routerLink='/contacts/lists' class="simple-form-button" color="primary" mat-raised-button
+      <button routerLink='/contacts/view' class="simple-form-button" color="primary" mat-raised-button
         (click)="resetForm()">
         Ok
       </button>
