--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -10,88 +10,96 @@
 
 
 <div *ngIf='isViewAll'>
-    <button color="primary" class="simple-form-button pull-right" mat-raised-button
-        routerLink='/contacts/add'>
-      +
-    </button>
-    <mat-form-field  *ngIf='contactsArr.length > 0'>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-      </mat-form-field>
-      
-    <div *ngIf='contactsArr.length > 0' >
+  <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='/contacts/add'>
+    +
+  </button>
+  <mat-form-field *ngIf='contactsArr.length > 0'>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+  </mat-form-field>
+
+  <div *ngIf='contactsArr.length > 0'>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Checkbox Column -->
+      
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
           <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
             [indeterminate]="selection.hasValue() && !isAllSelected()">
           </mat-checkbox>
         </th>
+       
         <td mat-cell *matCellDef="let row">
           <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
             [checked]="selection.isSelected(row)">
           </mat-checkbox>
         </td>
       </ng-container>
+
       <!-- givenName Column -->
       <ng-container matColumnDef="givenName">
         <th mat-header-cell *matHeaderCellDef> Given name</th>
-        <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
+        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.givenName}} </td>
       </ng-container>
+
       <!-- familyName Column -->
       <ng-container matColumnDef="familyName">
         <th mat-header-cell *matHeaderCellDef> Family name</th>
-        <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
+        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.familyName}} </td>
       </ng-container>
-      <!-- email Column -->
+      <!-- listName Column -->
       <ng-container matColumnDef="listName">
         <th mat-header-cell *matHeaderCellDef> List Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.listName}} </td>
+        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.listName}} </td>
       </ng-container>
-
-       <!-- email Column -->
-       <ng-container matColumnDef="email">
+      <ng-container>
+      <td> <mat-card>s---s</mat-card></td>
+    </ng-container>
+      <!-- email Column -->
+      <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> Email</th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.email}} </td>
       </ng-container>
 
+      <!-- Action Column -->
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="editContact(element)">
+        <td mat-cell *matCellDef="let contact">
+          <button mat-icon-button (click)="editContact(contact)">
             <mat-icon>create</mat-icon>
           </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
+     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
       </tr>
+     
     </table>
     <br>
   </div>
 </div>
 
 <div *ngIf='isDelete' align='center'>
-        <mat-card>
+  <mat-card>
     <mat-card-title> Are you sure you want to delete the contact of {{deleteContactName}}? </mat-card-title>
-    <div >
-    <button routerLink='/contacts/view' class="simple-form-button pull-center" color="Basic" mat-raised-button
-      (click)="resetForm()"> 
-      Cancel
-    </button>
-    &nbsp;
-    &nbsp;
-    <button routerLink='/contacts/view' class="simple-form-button pull-center" color="primary" mat-raised-button
-      (click)="deleteContact()"> 
-      Delete
-    </button>
+    <div>
+      <button routerLink='/contacts/view' class="simple-form-button pull-center" color="Basic" mat-raised-button
+        (click)="resetForm()">
+        Cancel
+      </button>
+      &nbsp;
+      &nbsp;
+      <button routerLink='/contacts/view' class="simple-form-button pull-center" color="primary" mat-raised-button
+        (click)="deleteContact()">
+        Delete
+      </button>
     </div>
   </mat-card>
 </div>
 
- 
+
 <div class="simple-form-aligner" *ngIf='isEditMode'>
   <mat-card class="simple-form-card">
     <mat-card-title>Edit contact </mat-card-title>
@@ -145,7 +153,7 @@
 <div *ngIf='listAddMessage !== undefined'>
   <div *ngIf='!isEditMode'>
     <mat-card-title> {{listAddMessage}}</mat-card-title>
-    <button routerLink='/contacts/view' class="simple-form-button" color="primary" mat-raised-button
+    <button routerLink='/contacts/view-contacts' class="simple-form-button" color="primary" mat-raised-button
       (click)="resetForm()">
       Ok
     </button>
@@ -154,15 +162,16 @@
 
 
 <ng-template #modal>
-    <mat-dialog-content>
-      <div>
-          Are you sure you want to delete the contact of <br> {{deleteContactName}}?
-      </div>
-    </mat-dialog-content>
-    <mat-dialog-actions align='center'>
-      <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
-      </button>
-      <button (click)="deleteContact()" mat-raised-button cdkFocusInitial color='primary'>Yes
-      </button>
-    </mat-dialog-actions>
-  </ng-template>
+  <mat-dialog-content>
+    <div>
+      Are you sure you want to delete the contact of <br> {{deleteContactName}}?
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions align='center'>
+    <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
+    </button>
+    <button (click)="deleteContact()" mat-raised-button cdkFocusInitial color='primary'>Yes
+    </button>
+  </mat-dialog-actions>
+</ng-template>
+ 
