--- a/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/src/app/contacts/contacts-details/contacts-details.component.html
@@ -1,22 +1,27 @@
-<div class="container">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Contact details </mat-card-title>
-      <img mat-card-avatar src="/assets/img/profile-demo.jpg">
-    </mat-card-header>
-    <br>
-    <mat-card-content>Given name: {{contactDetails.givenName}}</mat-card-content>
-    <mat-card-content>Family name: {{contactDetails.familyName}}</mat-card-content>
-    <mat-card-content>email: {{contactDetails.email}}</mat-card-content>
-    <mat-card-footer style="text-align: right;">
-      <button mat-icon-button (click)="editContact()">
-        <mat-icon>create</mat-icon>
-      </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact()">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </mat-card-footer>
-  </mat-card>
-</div>
+<mat-card style="margin: 2px;">
+  <mat-card-header>
+    <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+    <div class="contactStyle">
+      <div class="name">
+        {{contactDetails.givenName}}
+        &nbsp;
+        {{contactDetails.familyName}}
+      </div>
+      <div class="email">
+        {{contactDetails.email}}
+      </div>
+      <div class="controls">
+        <button mat-icon-button (click)="editContact(contact)">
+          <mat-icon>create</mat-icon>
+        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    </div>
+  </mat-card-header>
+</mat-card>
+
+<br>
 
 
 
