--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.scss
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.scss
@@ -1,3 +1,28 @@
 table {
   width: 100%;
 }
+
+
+.ListStyle {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  justify-content: space-between;
+ .listName {
+  width: 180px;
+  flex-grow: 1;
+ }
+ .contactsNumber {
+  width: 180px;
+  flex-grow: 1;
+ } 
+ .controls {
+  flex-grow: 1;
+  text-align: right;
+}
+}
+ 
+
+
+
