--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -1,7 +1,13 @@
-<mat-card style="margin: 2px;" *ngFor="let contact of contactsArr">
+<div *ngIf='!isEditMode'>
+    <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='/contacts/add'>
+      +
+    </button>
+    <br>
+    <br>
+    <mat-card style="margin: 2px;" *ngFor="let contact of contactsArr">
   <mat-card-header>
     <img mat-card-avatar src="/assets/img/profile-demo.jpg" >
-    <div class="major-points">
+    <div class="contactStyle">
       <div class="name"  (click)="onSelect(contact)">
         {{contact.givenName}}
         &nbsp;
@@ -10,9 +16,10 @@
       <div class="email"  (click)="onSelect(contact)">
         {{contact.email}}
       </div>
+      <div class="list"  (click)="onSelect(contact)">
+          {{contact.listName}}
+        </div>
       <div class="controls">
-        <div></div>
-
         <button mat-icon-button (click)="editContact(contact)" >
           <mat-icon>create</mat-icon>
         </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
@@ -22,7 +29,7 @@
     </div>
   </mat-card-header>
 </mat-card>
-
+</div>
 <br>
 
 
@@ -42,78 +49,6 @@
 
 
 <div *ngIf='isViewAll'>
-  <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='/contacts/add'>
-    +
-  </button>
-  <mat-form-field *ngIf='contactsArr.length > 0'>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-  </mat-form-field>
-
-  <div *ngIf='contactsArr.length > 0'>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <!-- Checkbox Column -->
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-            [indeterminate]="selection.hasValue() && !isAllSelected()">
-          </mat-checkbox>
-        </th>
-
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-            [checked]="selection.isSelected(row)">
-          </mat-checkbox>
-        </td>
-      </ng-container>
-
-      <!-- givenName Column -->
-      <ng-container matColumnDef="givenName">
-        <th mat-header-cell *matHeaderCellDef> Given name</th>
-        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.givenName}} </td>
-      </ng-container>
-
-      <!-- familyName Column -->
-      <ng-container matColumnDef="familyName">
-        <th mat-header-cell *matHeaderCellDef> Family name</th>
-        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.familyName}} </td>
-      </ng-container>
-      <!-- listName Column -->
-      <ng-container matColumnDef="listName">
-        <th mat-header-cell *matHeaderCellDef> List Name</th>
-        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.listName}} </td>
-      </ng-container>
-      <ng-container>
-        <td>
-          <mat-card>s---s</mat-card>
-        </td>
-      </ng-container>
-      <!-- email Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email</th>
-        <td mat-cell *matCellDef="let contact" (click)="onSelect(contact)"> {{contact.email}} </td>
-      </ng-container>
-
-      <!-- Action Column -->
-      <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let contact">
-          <button mat-icon-button (click)="editContact(contact)">
-            <mat-icon>create</mat-icon>
-          </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(element)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-      </tr>
-
-    </table>
-    <br>
-  </div>
-</div>
-
 <div *ngIf='isDelete' align='center'>
   <mat-card>
     <mat-card-title> Are you sure you want to delete the contact of {{deleteContactName}}? </mat-card-title>
