--- a/src/app/contacts/contacts-list-details/contacts-list-details.component.html
+++ b/src/app/contacts/contacts-list-details/contacts-list-details.component.html
@@ -1,51 +1,33 @@
-
-    
-    <div class="container" *ngIf='listContact.length === 0'>
-      <mat-card>
-        <div class="col-md-8 offset-md-2">
-          <p> You dont have contacts into this list </p>
-        </div>
-      </mat-card>
+<div class="container" *ngIf='listContact.length === 0'>
+  <mat-card>
+    <div class="col-md-8 offset-md-2">
+      <p> You dont have contacts into this list </p>
     </div>
-  
-  
-  <div >
-      <div *ngIf='listContact.length > 0'>
-      <table mat-table [dataSource]="listContact" class="mat-elevation-z8">
-        <!-- Checkbox Column -->
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-              [indeterminate]="selection.hasValue() && !isAllSelected()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-              [checked]="selection.isSelected(row)">
-            </mat-checkbox>
-          </td>
-        </ng-container>
-        <!-- givenName Column -->
-        <ng-container matColumnDef="givenName">
-          <th mat-header-cell *matHeaderCellDef> Given name</th>
-          <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
-        </ng-container>
-        <!-- familyName Column -->
-        <ng-container matColumnDef="familyName">
-          <th mat-header-cell *matHeaderCellDef> Family name</th>
-          <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
-        </ng-container>
+  </mat-card>
+</div>
 
-         <!-- email Column -->
-         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef> Email</th>
-          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-        </tr>
-      </table>
-      <br>
+<mat-card style="margin: 2px;" *ngFor="let contact of listContact">
+  <mat-card-header>
+    <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+    <div class="contactStyle">
+      <div class="name" (click)="onSelect(contact)">
+        {{contact.givenName}}
+        &nbsp;
+        {{contact.familyName}}
+      </div>
+      <div class="email" (click)="onSelect(contact)">
+        {{contact.email}}
+      </div>
+      <div class="list" (click)="onSelect(contact)">
+        {{contact.listName}}
+      </div>
+      <div class="controls">
+        <button mat-icon-button (click)="editContact(contact)">
+          <mat-icon>create</mat-icon>
+        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
     </div>
-  </div>
+  </mat-card-header>
+</mat-card>
