--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='!isEditMode'>
+<div *ngIf='isViewAll'>
     <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='/contacts/add'>
       +
     </button>
@@ -37,7 +37,7 @@
 
 
 
-<div *ngIf='!isEditMode'>
+<div *ngIf='!isViewAll'>
   <div class="container" *ngIf='contactsArr.length === 0'>
     <mat-card>
       <div class="col-md-8 offset-md-2">
@@ -46,87 +46,58 @@
     </mat-card>
   </div>
 </div>
+ 
 
 
-<div *ngIf='isViewAll'>
-<div *ngIf='isDelete' align='center'>
-  <mat-card>
-    <mat-card-title> Are you sure you want to delete the contact of {{deleteContactName}}? </mat-card-title>
-    <div>
-      <button routerLink='/contacts/view' class="simple-form-button pull-center" color="Basic" mat-raised-button
-        (click)="resetForm()">
-        Cancel
-      </button>
-      &nbsp;
-      &nbsp;
-      <button routerLink='/contacts/view' class="simple-form-button pull-center" color="primary" mat-raised-button
-        (click)="deleteContact()">
-        Delete
-      </button>
-    </div>
-  </mat-card>
-</div>
-
-
-<div class="simple-form-aligner" *ngIf='isEditMode'>
-  <mat-card class="simple-form-card">
-    <mat-card-title>Edit contact </mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-        <div class="form-group">
-          <mat-form-field class="simple-form-field-50">
-            <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
-          </mat-form-field>
-          <mat-form-field class="simple-form-field-50">
-            <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
-          </mat-form-field>
-          <br>
-          <mat-form-field class="simple-form-field-100">
-            <input matInput placeholder="Email" name="email" formControlName="email">
-            <mat-error>
-              Not a valid email
-            </mat-error>
-          </mat-form-field>
-          <br>
-          <mat-form-field>
-            <mat-select placeholder="Choose a list" name="contactList" formControlName="contactList">
-              <mat-option *ngFor="let lst of lists" [value]="lst">
-                {{lst.listName}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <br>
-          <div style="text-align: center">
-            <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-              value="submit" (click)="updateContact(form.value)">
-              Update
-            </button>
-            &nbsp;
-            &nbsp;
-            <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-              value="submit" (click)="resetForm()">
-              Cancel
-            </button>
+<div class="simple-form-aligner" *ngIf='isEditContact'>
+    <mat-card class="simple-form-card">
+      <mat-card-title>Update contact </mat-card-title>
+      <mat-card-content>
+        <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+          <div class="form-group">
+            <mat-form-field class="simple-form-field-50">
+              <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
+            </mat-form-field>
+            <mat-form-field class="simple-form-field-50">
+              <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
+            </mat-form-field>
+            <br>
+            <mat-form-field class="simple-form-field-100">
+              <input matInput placeholder="Email" name="email" formControlName="email">
+              <mat-error>
+                Not a valid email
+              </mat-error>
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+              <mat-select placeholder="Choose a list" name="contactList" formControlName="contactList">
+                <mat-option *ngFor="let lst of lists" [value]="lst">
+                  {{lst.listName}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <br>
+            <div style="text-align: center">
+              <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+                value="submit" (click)="addContact(form.value)">
+                Create
+              </button>
+              &nbsp;
+              &nbsp;
+              <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
+                value="submit"  (click)="resetForm()">
+                Cancel
+              </button>
+            </div>
+            <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+              [diameter]=22>
+            </mat-progress-spinner>
           </div>
-          <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
-            [diameter]=22>
-          </mat-progress-spinner>
-        </div>
-      </form>
-    </mat-card-content>
-  </mat-card>
-</div>
-
-
-<div *ngIf='listAddMessage !== undefined'>
-  <div *ngIf='!isEditMode'>
-    <mat-card-title> {{listAddMessage}}</mat-card-title>
-    <button routerLink='/contacts/view-contacts' class="simple-form-button" color="primary" mat-raised-button
-      (click)="resetForm()">
-      Ok
-    </button>
+        </form>
+      </mat-card-content>
+    </mat-card>
   </div>
-</div>
+  
 
 
 <ng-template #modal>
