--- a/src/app/contacts/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list-view/contacts-list-view.component.html
@@ -1,3 +1,12 @@
+<div class="container" *ngIf='lists.length === 0'>
+  <mat-card>
+    <div class="col-md-8 offset-md-2">
+      <p> You dont have lists </p>
+    </div>
+  </mat-card>
+</div>
+
+
 <div *ngIf='isViewAll'>
     <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='/contacts/lists/add'>
       +
