--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -1,4 +1,15 @@
 <div *ngIf='isViewAll'>
+  <div class="container" *ngIf='contactsArr.length === 0'>
+    <mat-card>
+      <div class="col-md-8 offset-md-2">
+        <p> You dont have contacts </p>
+      </div>
+    </mat-card>
+  </div>
+</div>
+
+
+<div *ngIf='isViewAll'>
     <button color="primary" class="simple-form-button pull-right" mat-raised-button routerLink='/contacts/add'>
       +
     </button>
@@ -35,17 +46,6 @@
 
 
 
-
-
-<div *ngIf='!isViewAll'>
-  <div class="container" *ngIf='contactsArr.length === 0'>
-    <mat-card>
-      <div class="col-md-8 offset-md-2">
-        <p> You dont have contacts </p>
-      </div>
-    </mat-card>
-  </div>
-</div>
  
 
 
