--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -79,8 +79,8 @@
             <br>
             <div style="text-align: center">
               <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-                value="submit" (click)="addContact(form.value)">
-                Create
+                value="submit" (click)="updateContact(form.value)">
+                Update
               </button>
               &nbsp;
               &nbsp;
