--- a/src/app/contacts/contacts-list/contacts-list-details/contacts-list-details.component.html
+++ b/src/app/contacts/contacts-list/contacts-list-details/contacts-list-details.component.html
@@ -10,15 +10,15 @@
   <mat-card-header>
     <img mat-card-avatar src="/assets/img/profile-demo.jpg">
     <div class="contactStyle">
-      <div class="name" (click)="onSelect(contact)">
+      <div class="name" >
         {{contact.givenName}}
         &nbsp;
         {{contact.familyName}}
       </div>
-      <div class="email" (click)="onSelect(contact)">
+      <div class="email" >
         {{contact.email}}
       </div>
-      <div class="list" (click)="onSelect(contact)">
+      <div class="list" >
         {{contact.listName}}
       </div>
       <div class="controls">
