--- a/src/app/contacts/contacts-list/contacts-list-view/contacts-list-view.component.html
+++ b/src/app/contacts/contacts-list/contacts-list-view/contacts-list-view.component.html
@@ -56,7 +56,7 @@
             &nbsp;
             &nbsp;
             <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-              value="submit" (click)="resetForm()">
+              value="submit" (click)="cancelForm()">
               Cancel
             </button>
           </div>
