--- a/src/app/contacts/contacts-list/contacts-list-add/contacts-list-add.component.html
+++ b/src/app/contacts/contacts-list/contacts-list-add/contacts-list-add.component.html
@@ -6,6 +6,7 @@
         <div class="form-group">
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="List name" name="listName" formControlName="listName">
+            {{contact.listName}}
           </mat-form-field>
           <span 
           *ngIf='formErrorMessage' 
