--- a/src/app/contacts/contacts-details/contacts-details.component.html
+++ b/src/app/contacts/contacts-details/contacts-details.component.html
@@ -13,7 +13,7 @@
       <div class="controls">
         <button mat-icon-button (click)="editContact()">
           <mat-icon>create</mat-icon>
-        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact(contact)">
+        </button> <button mat-icon-button (click)="contactDeleteDialog(modal)" (click)="openDeleteContact()">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
