--- a/src/app/contacts/contacts-list/contacts-list-edit/contacts-list-edit.component.html
+++ b/src/app/contacts/contacts-list/contacts-list-edit/contacts-list-edit.component.html
@@ -7,41 +7,22 @@
           <mat-form-field class="simple-form-field-50">
             <input matInput placeholder="List name" name="listName" formControlName="listName">
           </mat-form-field>
-          <span 
-          *ngIf='formErrorMessage' 
-          class="text-error-color">
-            {{formErrorMessage}}
-        </span>
-    
+          <br>
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
               value="submit" (click)="updateList(form.value)">
               Update
             </button>
-            &nbsp;
-            &nbsp;
-            <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-              value="submit" routerLink='/contacts/lists'>
-              Cancel
-            </button>
+            <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+              [diameter]=22>
+            </mat-progress-spinner>
+            <span *ngIf='formErrorMessage' class="text-error-color">
+              {{formErrorMessage}}
+            </span>
           </div>
-          <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
-            [diameter]=22>
-          </mat-progress-spinner>
         </div>
       </form>
     </mat-card-content>
   </mat-card>
-</div>
-
-<div *ngIf='listAddMessage !== undefined'>
-  <div *ngIf='!isEditMode'>
-    <mat-card>
-    <mat-card-title> {{listAddMessage}}</mat-card-title>
-    <button routerLink='/contacts/lists' class="simple-form-button" color="primary" mat-raised-button>
-      Ok
-    </button>
-  </mat-card>
-  </div>
 </div>
