--- a/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/src/app/contacts/contacts-add/contacts-add.component.html
@@ -1,60 +1,62 @@
-
 <div class="simple-form-aligner" *ngIf='isEditMode'>
-    <mat-card class="simple-form-card">
-      <mat-card-title>Create contact </mat-card-title>
-      <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-          <div class="form-group">
-            <mat-form-field class="simple-form-field-50">
-              <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
-            </mat-form-field>
-            <mat-form-field class="simple-form-field-50">
-              <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
-            </mat-form-field>
-            <br>
-            <mat-form-field class="simple-form-field-100">
-              <input matInput placeholder="Email" name="email" formControlName="email">
-              <mat-error>
-                Not a valid email
-              </mat-error>
-            </mat-form-field>
-            <br>
-            <mat-form-field>
-              <mat-select placeholder="Choose a list" name="contactList" formControlName="contactList">
-                <mat-option *ngFor="let lst of lists" [value]="lst">
-                  {{lst.listName}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <br>
-            <div style="text-align: center">
-              <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-                value="submit" (click)="addContact(form.value)">
-                Create
-              </button>
-              &nbsp;
-              &nbsp;
-              <button [disabled]="waiting" class="simple-form-button" color="Basic" mat-raised-button type="submit"
-                value="submit"  routerLink='/contacts/view'>
-                Cancel
-              </button>
-            </div>
-            <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+  <mat-card class="simple-form-card">
+    <mat-card-title>Create contact </mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
+          </mat-form-field>
+          <mat-form-field class="simple-form-field-50">
+            <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
+          </mat-form-field>
+          <br>
+          <mat-form-field class="simple-form-field-100">
+            <input matInput placeholder="Email" name="email" formControlName="email">
+            <mat-error>
+              Not a valid email
+            </mat-error>
+          </mat-form-field>
+          <br>
+          <mat-form-field>
+            <mat-select placeholder="Choose a list" name="contactList" formControlName="contactList">
+              <mat-option *ngFor="let lst of lists" [value]="lst">
+                {{lst.listName}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <br>
+          <br>
+          <div style="text-align: center">
+            <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+              value="submit" (click)="addContact(form.value)">
+              Create
+            </button>
+            <mat-progress-spinner
+              *ngIf="waiting"
+              color="primary"
+              mode="indeterminate"
+              class="simple-form-spinner"
               [diameter]=22>
-            </mat-progress-spinner>
+          </mat-progress-spinner>
+          <span 
+              *ngIf='formErrorMessage' 
+              class="text-error-color">
+            {{formErrorMessage}}
+          </span>
           </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  
-  
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+
 <div *ngIf='contactAddMessage !== undefined'>
-    <div *ngIf='!isEditMode'>
-      <mat-card-title> {{contactAddMessage}}</mat-card-title>
-      <button routerLink='/contacts/view' class="simple-form-button" color="primary" mat-raised-button
-        >
-        Ok
-      </button>
-    </div>
+  <div *ngIf='!isEditMode'>
+    <mat-card-title> {{contactAddMessage}}</mat-card-title>
+    <button routerLink='/contacts/view' class="simple-form-button" color="primary" mat-raised-button>
+      Ok
+    </button>
   </div>
+</div>
